--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
             <version>10.16.1.1</version> <!-- Use the latest version -->
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
